k8s/flux/cluster/apps/monitoring/kube-prometheus-stack/app/tailscale-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-tailscale-svc
  namespace: kube-prometheus-stack
spec:
  loadBalancerClass: tailscale
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack 
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
