k8s/flux/cluster/apps/monitoring/kube-prometheus-stack/app/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale-ingress
  namespace: kube-prometheus-stack
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 80
  tls:
    - hosts:
        - grafana.tailscale.local
